--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <p>아래 링크를 클릭하여 각 폴더에 있는 페이지로 이동하세요.</p>
 
     <ul>
-        <li><a href="1/index.html">1번 페이지로 이동</a></li>
+        <!-- <li><a href="1/index.html">1번 페이지로 이동</a></li> -->
         <li><a href="2/index.html">2번 페이지로 이동</a></li>
-        <li><a href="3/index.html">3번 페이지로 이동</a></li>
+        <!-- <li><a href="3/index.html">3번 페이지로 이동</a></li>  -->
         <li><a href="4/index.html">4번 페이지로 이동</a></li>
-        <li><a href="5/index.html">5번 페이지로 이동</a></li>
+        <!-- <li><a href="5/index.html">5번 페이지로 이동</a></li>  -->
         <li><a href="6/index.html">6번 페이지로 이동</a></li>
         <li><a href="7/index.html">7번 페이지로 이동</a></li>
         <li><a href="8/index.html">8번 페이지로 이동</a></li>
