--- a/6/index.html
+++ b/6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>㈜정온홀딩스 - 종합건축 & 환경 솔루션 기업</title>
+    <title>㈜정온난방테크 - 난방 전문 기업</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -484,7 +484,7 @@
         <nav>
             <a href="#" class="logo">
                 <i class="fas fa-building"></i>
-                정온홀딩스
+                정온난방테크
             </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">홈</a></li>
@@ -516,7 +516,7 @@
         <div class="intro-content">
             <div class="intro-text">
                 <h2>통합 솔루션 전문 기업</h2>
-                <p>정온홀딩스는 건축 설계부터 시공, 인테리어, 에너지 절감형 고효율 난방 시스템, 공기 질 향상을 위한 필터 시스템까지 통합 솔루션을 제공하는 전문 기업입니다.</p>
+                <p>정온난방테크는 건축 설계부터 시공, 인테리어, 에너지 절감형 고효율 난방 시스템, 공기 질 향상을 위한 필터 시스템까지 통합 솔루션을 제공하는 전문 기업입니다.</p>
                 <p>지속 가능한 공간, 쾌적한 실내환경, 고객 맞춤형 디자인을 통해 더 나은 삶의 가치를 만들어갑니다.</p>
             </div>
             <div class="intro-image">
@@ -603,7 +603,7 @@
             <blockquote>
                 <p>"<strong>건축을 넘어, 사람과 환경을 생각합니다.</strong>"</p>
             </blockquote>
-            <p>정온홀딩스는 단순한 공간의 완성이 아닌, 쾌적하고 지속 가능한 삶의 터전을 만들기 위해 노력합니다.</p>
+            <p>정온난방테크는 단순한 공간의 완성이 아닌, 쾌적하고 지속 가능한 삶의 터전을 만들기 위해 노력합니다.</p>
         </div>
     </section>
 
@@ -631,14 +631,14 @@
             <div class="contact-item">
                 <i class="fas fa-envelope"></i>
                 <h3>이메일</h3>
-                <p>hhk_718@naver.com</p>
+                <p>nhd000107@naver.com</p>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 ㈜정온홀딩스. All Rights Reserved.</p>
+        <p>&copy; 2025 ㈜정온난방테크. All Rights Reserved.</p>
     </footer>
 
     <script>
